Remove `flex-direction` to fix gallery figure stretch
Assigning flex direction "column" on gallery figure elements
caused images to stretch to match the tallest image in the group
instead of cropping to the correct size. The issue only first
showed up in Chrome v74.

--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -1009,9 +1009,8 @@ input[type="number"] {
 
 	.wp-block-gallery .blocks-gallery-image figure,
 	.wp-block-gallery .blocks-gallery-item figure {
-		align-items: flex-end;
+		align-items: flex-start;
 		display: flex;
-		flex-direction: column;
 		justify-content: flex-start;
 	}
 
